<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_new_file"
        android:icon="@drawable/text"
        android:title="@string/newfile" />

    <item
        android:id="@+id/menu_new_folder"
        android:icon="@drawable/folder_default"
        android:title="@string/newfolder" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/change_layout"
        android:icon="@drawable/ic_search"
        android:title="@string/list" />


</menu>
