<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/delete_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/connection_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/connect_btns"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.jksol.filemanager.Widgets.CustomTextView
                android:id="@+id/txt_dialog_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/smb_con"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontName="@string/font_helvetica_neue_regular" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/connectionTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/connectionET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:hint="@string/connectionname"
                            android:inputType="textUri" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ipTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ipET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:hint="@string/smb_server"
                            android:inputType="textUri" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/domainTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/domainET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:hint="@string/domain"
                            android:inputType="textUri" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/usernameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/username"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/passwordET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/anonymous" />

                    <TextView
                        android:id="@+id/wanthelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/wanthelp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connect_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/colorFooterBorderTop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:id="@+id/dialaog_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/selector"
                    android:text="@string/cancel"
                    android:textColor="@color/brightRed" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorFooterBorderTop" />

                <Button
                    android:id="@+id/dialog_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/selector"
                    android:text="@string/btn_lbl_connect"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>