<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/delete_dialog_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.jksol.filemanager.Widgets.CustomTextView
                    android:id="@+id/txt_dialog_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/property"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:fontName="@string/font_helvetica_neue_regular" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_dialog_label"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/file_icon"
                            android:layout_width="35dp"
                            android:layout_height="35dp" />

                        <com.jksol.filemanager.Widgets.CustomTextView
                            android:id="@+id/file_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="Instagram"
                            android:textSize="16sp"
                            app:fontName="@string/font_montserrat_regular" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_dialog_label"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/simple_border"
                        android:textSize="1dp" />

                    <LinearLayout
                        android:id="@+id/filefolder_property_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:id="@+id/app_property_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            android:weightSum="100">

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="60"
                                android:text="Version:" />

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:id="@+id/versionCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="40"
                                android:text="10.4.0.0" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            android:weightSum="100">

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="60"
                                android:text="Size:" />

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:id="@+id/filesize"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="40"
                                android:text="18.9 MB" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            android:weightSum="100">

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="60"
                                android:text="package Name:" />

                            <com.jksol.filemanager.Widgets.CustomTextView
                                android:id="@+id/packagename"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="40"
                                android:text="com.instagrammmmmer.com" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorFooterBorderTop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="90">

                    <Button
                        android:id="@+id/dialog_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:background="@drawable/selector"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorFooterBorderTop" />

                    <Button
                        android:id="@+id/dialog_uninstall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:background="@drawable/selector"
                        android:text="@string/uninstall"
                        android:textColor="@color/brightRed" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorFooterBorderTop" />

                    <Button
                        android:id="@+id/dialog_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:background="@drawable/selector"
                        android:text="@string/open"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>

